--- a/app/globals.css
+++ b/app/globals.css
@@ -39,7 +39,8 @@ body {
 }
 
 .animate-fadeIn {
-  animation: fadeIn 0.3s ease-out forwards;
+  /* animation: fadeIn 0.3s; */
+  transition: all .3s;
 }
 
 .shadow-custom-red {
